remove PropertyMethod type from the code base  * TypeHandlers now have TypeHandler#name method  * TypeHandler now have TypeHandler#type method  * default value now is contextual     - single value for SimpleTypeHandler;     - a list for CollectionTypeHandler;     - none for OptionalTypeHandler  * clean up for TypeHandler